fix: image background zoom on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,7 +131,17 @@
 .bg_page {
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
     var(--image-url);
+  content: "";
+  /* position: fixed; */
+  top: 0px;
+  left: 0px;
+  z-index: -1;
+  height: 100vh;
+  width: 100%;
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
 }
